<resources>
    <string name="app_name">HealthAndPrediction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api_key">AIzaSyDh2PE0XVcLpI4iIuIZwBibWTHDzDjAOoI</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_do_you_want_to_register">Don\'t have an account? Do you want to register</string>
    <string name="login">Login</string>
    <string name="on_login_with">On Login with</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="default_web_client_id">1020508641025-f8o8njqi21p6ndhnnv07k44aeib1ck97.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="pharmacy_name">pharmacy name</string>
    <string name="district">district</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="submit">Submit</string>
</resources>