<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/SlateGray1"
    tools:context=".ui.profile.ForgotPasswordFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_forgot_icon_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_forgot_icon_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/forgot_icon"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_email_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_forgot_icon_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_forgot_edittext_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout_forgot_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/social_backgraound"
        app:layout_constraintEnd_toEndOf="@+id/forgot_email_Id"
        app:layout_constraintStart_toStartOf="@+id/forgot_email_Id"
        app:layout_constraintTop_toBottomOf="@+id/forgot_email_Id">

        <ImageView
            android:id="@+id/imageView_forgot_id1"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/save_forgot" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_button_id"
            style="@android:style/Widget.Button"
            android:layout_width="90dp"
            android:layout_height="56dp"
            android:background="@drawable/social_backgraound"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



